# simple-uniform-noise

./: .gitignore  README.md  noise.hpp  polyfit.hpp  staff.hpp
processing/: CMakeLists.txt  CMakePresets.json  CMakeUtils.cmake  download_deps.py  main.cpp
